[package]
name = "rschain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
rand = "0.8.5"
ripemd = "0.1.3"
secp256k1 = { version = "0.30.0", features = ["rand", "hashes"] }
serde =  "1.0.217"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
